improve app structure and imports

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-  <link rel="stylesheet" type="text/css" href="/main.css" />
-  <script defer type="module" src="/main.js"></script>
+  <link rel="stylesheet" type="text/css" href="/index.css" />
+  <script defer type="module" src="/index.js"></script>
   <title>TPOT Scribe</title>
 </head>
 
