improve vite build settings + structure

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="description" content="Easily convtert DOCX to HTML code" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-  <link rel="stylesheet" type="text/css" href="/index.css" />
+  <link rel="icon" type="image/svg+xml" href="/svg/favicon.svg" />
   <script defer type="module" src="/index.js"></script>
   <title>TPOT Scribe</title>
 </head>
