--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="description" content="Easily convtert DOCX to HTML code" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg+xml" href="/svg/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
   <script defer type="module" src="/index.js"></script>
   <title>TPOT Scribe</title>
 </head>
